--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -30,6 +30,16 @@
     }
 
     &__hero {
+
+        background: linear-gradient(rgba(50, 50, 50, 0.5), rgba(50, 50, 50, 0.5)),
+            url("../assets/Images/about.jpg");
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 50vw;
+    
+
         @include breakpoints.large {
         }
 
@@ -40,11 +50,9 @@
             position: absolute;
             text-align: left;
             padding-top: 5%;
-            height: 70vw;
             right: 0;
             padding-left: 1.25rem;
             color: $white;
-            background: rgb(50, 50, 50, 0.5);
             padding-left: 2rem;
             font-weight: 400;
             font-size: 1rem;
