--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -10,11 +10,10 @@
     display: flex;
     flex-direction: column;
 
-    @include breakpoints.medium 
-    {
+    @include breakpoints.medium {
         height: 6.75rem;
     }
-  
+
     &__logo-name {
         text-align: center;
         font-weight: 400;
@@ -40,27 +39,25 @@
         font-size: 1rem;
         line-height: 2rem;
 
-        @include breakpoints.medium{
-                color: $white;
-                font-size: 4rem;
-                line-height: 2rem;
-                padding: 2rem 0 0 0;
-                width: 16rem;
+        @include breakpoints.medium {
+            color: $white;
+            font-size: 4rem;
+            line-height: 2rem;
+            padding: 2rem 0 0 0;
+            width: 16rem;
         }
     }
 
     &__navigation {
         text-align: left;
-       
-
 
         @include breakpoints.medium {
             display: flex;
             justify-content: left;
             align-items: center;
-            width: 18.75rem;
+            // width: 18.75rem;
             margin: 0 2rem;
-            
+
 
         }
 
@@ -93,10 +90,12 @@
 li {
     list-style: none;
     width: 50%;
-   text-align: center;
-@include breakpoints.medium {
-    text-align: left;
-}
+    text-align: center;
+
+    @include breakpoints.medium {
+        text-align: left;
+        width: fit-content;
+    }
 }
 
 @include breakpoints.medium {
@@ -104,39 +103,35 @@ li {
         flex-direction: row;
         width: 100vw;
         align-items: center;
-        }
+    }
 
-.active {
-    font-weight: 400;
-    line-height: 2rem;
-    padding-bottom: 25px;
-    color: $white;
-    width: fit-content;
-    margin: 0;
-    border-bottom: 0.2rem solid $white;
-
+    .active {
+        font-weight: 400;
+        line-height: 2rem;
+        padding-bottom: 25px;
+        color: $white;
+        width: fit-content;
+        margin: 0;
+        border-bottom: 0.2rem solid $white;
+    }
 }
 
-}
-
-
-
-// .header__menu-item, 
 
 .active-mobile {
     border-bottom: 0.2rem solid $white;
-        font-weight: 400;
-        color: $white;
-        @include breakpoints.medium {
-border-bottom: none;
     font-weight: 400;
     color: $white;
-        }
+
+    @include breakpoints.medium {
+        border-bottom: none;
+        font-weight: 400;
+        color: $white;
+    }
 }
 
 .header__menu-item:hover {
     font-weight: 600;
-            padding-bottom: 25px;
+    padding-bottom: 25px;
     color: $white;
 
     @include breakpoints.medium {
@@ -147,4 +142,3 @@ border-bottom: none;
         color: $white;
     }
 }
-
