--- a/styles/partials/_main-content.scss
+++ b/styles/partials/_main-content.scss
@@ -13,6 +13,17 @@
     position: relative;
     color: $color-primary-dark;
 
+
+        &__hero {
+                background: linear-gradient(rgba(50, 50, 50, 0.5), rgba(50, 50, 50, 0.5)),
+                    url("../assets/images/main-hero.jpg");
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
+                width: 100%;
+                height: 50vw;
+            }
+
     &__first--content {
 
         font-weight: 600;
@@ -38,17 +49,18 @@
     }
 
 
-    &__hero--image {
-        height: 50vw;
-        width: 100vw;
-        margin: 0 auto;
-        background-size: cover;
-        position: relative;
-        @include breakpoints.medium
-        {
-        height: 50vw;
-        }
-    }
+
+    // &__hero--image {
+    //     height: 50vw;
+    //     width: 100vw;
+    //     margin: 0 auto;
+    //     background-size: cover;
+    //     position: relative;
+    //     @include breakpoints.medium
+    //     {
+    //     height: 50vw;
+    //     }
+    // }
 
     &__hero--title {
         top: 0;
@@ -57,10 +69,8 @@
         position: absolute;
         text-align: left;
         padding-top: 25%;
-        height: 50vw;
         right: 0;
         color: $white;
-        background: rgb(50, 50, 50, 0.5);
         padding-left: 1rem;
         font-weight: 400;
         font-style: italic;
