--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -34,7 +34,7 @@
     &__hero {
 
         background: linear-gradient(rgba(50, 50, 50, 0.5), rgba(50, 50, 50, 0.5)),
-            url("../assets/Images/about.jpg");
+            url("../assets/images/about.jpg");
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
