fixed problem with img

--- a/styles/shows.css
+++ b/styles/shows.css
@@ -68,7 +68,7 @@
   }
 }
 .main__hero {
-  background: linear-gradient(rgba(50, 50, 50, 0.5), rgba(50, 50, 50, 0.5)), url("../assets/Images/about.jpg");
+  background: linear-gradient(rgba(50, 50, 50, 0.5), rgba(50, 50, 50, 0.5)), url("../assets/images/about.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
