Refactore code, add webp image to improve performance

--- a/styles/partials/_main-content.scss
+++ b/styles/partials/_main-content.scss
@@ -16,7 +16,7 @@
 
         &__hero {
                 background: linear-gradient(rgba(50, 50, 50, 0.5), rgba(50, 50, 50, 0.5)),
-                    url("../assets/images/main-hero.jpg");
+                    url("../assets/images/main-hero.webp");
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
